kubernetes/main/apps/downloads/tubesync/app/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tubesync
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: tubesync
  egress:
    - toFQDNs: # TODO: More domains to add here
        - matchPattern: '*.youtube.com'
        - matchName: youtube.com

      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
